# telegram_downloader

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  cli.py  config.py  config.toml  constants.py  download.py  historico.py  historico_downloads.json  makefile  pyproject.toml  util.py
.github/workflows/: build.yml
