[project]
name = "telegram-video-downloader"
version = "3.5.7"
description = "CLI para facilitar o download de vídeos em grupos/canais do Telegram"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "loguru>=0.7.3",
    "pyaesni",
    "python-dotenv>=1.2.2",
    "qrcode>=8.2",
    "questionary>=2.1.1",
    "rich>=14.3.3",
    "telethon>=1.42.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.6",
]

build = [
        "nuitka>=4.0.5",
        "zstandard>=0.25.0",
]

[tool.uv.sources]
pyaesni = { git = "https://github.com/painor/pyaesni.git" }
